# ede-pl

./: .gitignore  README.md  TODO  ede_token.py  ede_utils.py  lexer.py  main.py  makefile  mypy.ini  output.txt  pyproject.toml  setup.py  token.py
src/: ede_parser.py  ede_token.py  ede_utils.py  lexer.py  main.py
src/edb/: edb.py  gui.py  gui.ui
src/ede/: ede.bat  ede.py  ede_lexer.py  ede_parser.py  ede_token.py  ede_utils.py  interpreter.py
src/ede/ede_ast/: ede_ast.py  ede_binop.py  ede_context.py  ede_definition.py  ede_expr.py  ede_ir.py  ede_literal.py  ede_module.py  ede_stmt.py  ede_type_symbol.py  ede_typesystem.py
src/ede/ede_ast/ede_visitors/: ede_cfg_visitor.py  ede_execution_visitor.py  ede_ir_visitor.py  ede_json_visitor.py  ede_typecheck_visitor.py
src/ede_ast/: ede_ast.py  ede_binop.py  ede_expr.py  ede_literal.py  ede_type.py
src/evm/: README.md  build.h  build.py  bytecode.md  evm.cpp  evm.py  instructions.h
src/evm/src/: evm.cpp  evm.h  heap.cpp  heap.h  instructions.cpp  instructions.h  main.cpp  program.cpp  program.h  template.h  tests.cpp  tests.h  thread.cpp  thread.h  vm.cpp  vm.h
src/evm/tests/: factorial.edeasm  printable_characters.edeasm
tests/: conftest.py  rule110.ede  rule110.ede.dot  rule110.ede.json  test.ede  test.ede.dot  test.ede.ir.json  test.ede.json  test.edeasm  test.edec  test.ram  test.ram.ast  test.ram.json  test_execution.py  test_lexer.py  test_parser.py  test_typechecking.py
tests/cases/functions/: input.ede
tests/evm/: exit.edeasm  expected.txt  factorial.edeasm  hello_world.edeasm  print_chars.edeasm
