[tool.poetry]
name = "ede"
version = "0.1.0"
description = "Ede Programming Language"
authors = ["Rayshard Thompson <rayshard.t123@gmail.com>"]
license = "MIT"
#readme = "README.md"
repository = "https://github.com/Rayshard/ede-pl"
packages = [
    { include = "src" }
]
exclude = ["TODO"]

[tool.poetry.scripts]
ede = 'src.ede.ede:cli'
evm = 'src.evm.evm:run'
evm-build = 'src.evm.evm:build'

[tool.poetry.dependencies]
python = ">=3.10"
click = "*"
pydot = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
